Slick Slider fixed, Z-Index for Cookie Notice fixed

--- a/inc/scss/_globals.scss
+++ b/inc/scss/_globals.scss
@@ -41,3 +41,7 @@ a {
 strong {
     font-weight: 600;
 }
+
+.cc-revoke, .cc-window {
+    z-index: 99 !important;
+}
