--- a/style.css
+++ b/style.css
@@ -1642,6 +1642,10 @@ strong {
   font-weight: 600;
 }
 
+.cc-revoke, .cc-window {
+  z-index: 99 !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto Mono", monospace;
 }
@@ -2780,4 +2784,3 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 2rem;
   }
 }
-/*# sourceMappingURL=style.css.map */
